sandbox/output
Patient.java:14: error: cannot find symbol
        if (!isOverlapped()) {
             ^
  symbol:   method isOverlapped()
  location: class Patient
1 error
